feat/removing localstorage
