# back-end/src/users/dto/index.ts
@@ -3,3 +3,4 @@ export { UserResponseDto } from './user-response.dto';
 export { LoginUserDto } from './login-user.dto';
 export { FirmOnboardingDto } from './firm-onboarding.dto';
 export { FirmOnboardingResponseDto } from './firm-onboarding-response.dto';
+export { UpdateUserDto } from './update-user.dto';
